--- a/Contact/src/view/PersonOverview.fxml
+++ b/Contact/src/view/PersonOverview.fxml
@@ -63,7 +63,7 @@
                      <children>
                         <Button mnemonicParsing="false" text="Button" />
                         <Button mnemonicParsing="false" text="Button" />
-                        <Button mnemonicParsing="false" text="Button" />
+                        <Button mnemonicParsing="false" onAction="#handleDeletePerson" text="Delete" />
                      </children>
                   </HBox>
                </children>
